# exceedance_frequency_curves

./: .gitignore  README.md  combine_exceedance_curves.py  convert_resolution.py  coordinates.py  estimate_AAI.ipynb  example.ipynb  example_combine_two_curves copy.ipynb  example_combine_two_curves.ipynb  example_resolution.ipynb  exceedance_curves.py  notebook.ipynb  pyproject.toml  return_period_maps.py  test_exceedance_curves.py  test_utils.py  utils.py
docs/: estimate_AAI.ipynb  example_combine_two_curves.ipynb  example_resolution.ipynb
exceedance_curve_tools/: __init__.py  coordinates.py  exceedance_curves.py  return_period_maps.py  utils.py
test/: test_exceedance_curves.py  test_utils.py
